--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ djangorestframework-simplejwt==5.0.0
 python-dotenv==1.0.1
 psycopg2-binary==2.9.8
 whitenoise==6.6.0
+openpyxl==3.1.2
+pandas==2.2.2
