--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - mongo
     networks:
       - my_network
 
@@ -20,7 +21,18 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     networks:
       - my_network
-  
+   
+   mongo:
+    image: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+    networks:
+      - my_network
+
 networks:
   my_network:
     driver: bridge
