--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,7 @@
       "use": "@vercel/python"
     },
     {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles"
-      }
+      "src": "build_files.sh"
     }
   ],
   "routes": [
