--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
    web:
     build: .
     command:  >
-      sh -c "python manage.py migrate --settings=vercel_app.dev && 
-             python manage.py runserver 0.0.0.0:8000 --settings=vercel_app.dev"
+      sh -c "python manage.py migrate --settings=vercel_app.docker && 
+             python manage.py runserver 0.0.0.0:8000 --settings=vercel_app.docker"
     ports:
       - "8000:8000"
     depends_on:
